fix(nav): link spacing (#971)

--- a/src/pages/common/components/RecentChats.less
+++ b/src/pages/common/components/RecentChats.less
@@ -6,7 +6,7 @@
         .menuItem {
             align-items: center;
 
-            &:global > i.icon {
+            &:global > span i.icon {
                 width: 1.2em;
                 float: none !important;
                 margin: inherit;
@@ -20,7 +20,7 @@
                 color: @classic-neutral-grey-2 !important;
             }
 
-            span {
+            span > span {
                 font-weight: 600;
             }
         }
